Fixed z-index

--- a/src/app/index.less
+++ b/src/app/index.less
@@ -127,6 +127,9 @@ table {
     margin: 0 10px;
   }
 }
+#toast-container {
+  z-index: 999;
+}
 
 /**
  *  Do not remove the comments below. It's the markers used by gulp-inject to inject
